# action-read-toml

./: .cz.toml  .dockerignore  .flake8  Dockerfile  Makefile  README.md  action.yaml  config.cfg  pyproject.toml  requirements.txt  sample.toml
.github/: dependabot.yaml
.github/workflows/: cache.yaml  checks.yaml  main.yaml  release.yaml  sample.yaml  self_test.yaml  version.yaml
make/: ci.py.Makefile  docker.Makefile  env.Makefile  env.py.Makefile  setup.py.Makefile  vars.Makefile  vars.app.Makefile  vars.app.py.Makefile  vars.cfg.Makefile  vars.docker.Makefile  vars.docker.py.Makefile
src/: main.py
test/: __init__.py  action.yaml  test_main.py
